janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__as_threading_binding.snap
---
source: src/analysis/scopes/tests.rs
assertion_line: 235
expression: (as-> 1 x (+ |x 1) (* x 2))
---
----- BINDING
(as-> 1 x (+ x 1) (* x 2))
        ▔    ↑
