janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__def_in_a_comment_is_local_to_it.snap
---
source: src/analysis/scopes/tests.rs
expression: (comment (def a 1) (+ |a 1))
---
----- BINDING
(comment (def a 1) (+ a 1))
              ▔       ↑
