janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__dofile_argument_is_evaluated.snap
---
source: src/analysis/scopes/tests.rs
assertion_line: 160
expression: "(defn run [path] (dofile |path))"
---
----- BINDING
(defn run [path] (dofile path))
           ▔▔▔▔          ↑
