janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__double_unquote_in_a_nested_quasiquote_is_evaluated.snap
---
source: src/analysis/scopes/tests.rs
expression: "(defmacro m [x] ~(a ~(b ,,|x)))"
---
----- BINDING
(defmacro m [x] ~(a ~(b ,,x)))
             ▔            ↑
