janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__each_destructured_binding.snap
---
source: src/analysis/scopes/tests.rs
expression: "(each [k v] (pairs t) (put t |k v))"
---
----- BINDING
(each [k v] (pairs t) (put t k v))
       ▔                     ↑
