janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__fn_with_parenthesized_parameters.snap
---
source: src/analysis/scopes/tests.rs
assertion_line: 240
expression: (fn (x) |x)
---
----- BINDING
(fn (x) x)
     ▔  ↑
