janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__if_let_binding_in_the_then_branch.snap
---
source: src/analysis/scopes/tests.rs
expression: "(if-let [v 1] |v v)"
---
----- BINDING
(if-let [v 1] v v)
         ▔    ↑
