janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__if_with_binding_in_the_then_branch.snap
---
source: src/analysis/scopes/tests.rs
assertion_line: 225
expression: "(if-with [f (open)] |f f)"
---
----- BINDING
(if-with [f (open)] f f)
          ▔         ↑
