janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__import_star_argument_is_evaluated.snap
---
source: src/analysis/scopes/tests.rs
assertion_line: 170
expression: "(defn run [module] (import* |module))"
---
----- BINDING
(defn run [module] (import* module))
           ▔▔▔▔▔▔           ↑
