janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__inner_let_shadows_outer_let.snap
---
source: src/analysis/scopes/tests.rs
expression: "(let [x 1] (let [x 2] |x))"
---
----- BINDING
(let [x 1] (let [x 2] x))
                 ▔    ↑
