janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__let_bindings_are_sequential.snap
---
source: src/analysis/scopes/tests.rs
expression: "(let [a 1 b |a] b)"
---
----- BINDING
(let [a 1 b a] b)
      ▔     ↑
