janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__locals_visible_in_a_let_body.snap
---
source: src/analysis/scopes/tests.rs
expression: "(defn f [a b] (let [b 1] |))\n(print 1)"
---
----- VISIBLE LOCALS
(defn f [a b] (let [b 1] ))
         ▔          ▔    ↑
(print 1)
b, a
